--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@payloadcms/richtext-slate": "^1.3.1",
     "escape-html": "^1.0.3",
     "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "next": "14.0.3",
@@ -23,9 +24,11 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "split-type": "^0.3.4",
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
